--- a/webdocs/templates/sideBar.html
+++ b/webdocs/templates/sideBar.html
@@ -1,6 +1,18 @@
-<ul>
+<ul id="internalLinks">
     <a href="/"><li>Home</li></a>
     <a href="/history"><li>History</li></a>
     <a href="/events"><li>Events</li></a>
-    <a href="/nonsense"><li>NotARealPage</li></a>
+    <a href="/coaching"><li>Coaching Information</li></a>
+    <a href="/contact"><li>Contact Details</li></a>
+    <a href="/membership"><li>Membership</li></a>
+    <a href="/map"><li>How To Find Us</li></a>
+</ul>
+
+<p id="externalLinksLI">EXTERNAL LINKS</p>
+<ul id="externalLinks">
+    <a href="http://www.lta.org.uk/in-your-area/Suffolk"><li>Suffolk LTA</li></a>
+    <a href="http://www.lta.org.uk"><li>LTA</li></a>
+    <a href="http://www.eastbergholt.org.uk"><li>East Bergholt</li></a>
+    <a href="https://facebook.com/EastBergholt"><li>Facebook</li></a>
+    
 </ul>
