--- a/webdocs/templates/sideBar.html
+++ b/webdocs/templates/sideBar.html
@@ -1,5 +1,5 @@
 <ul id="internalLinks">
-    <a href="/"><li>Home</li></a>
+    <a href="/main"><li>Home</li></a>
     <a href="/history"><li>History</li></a>
     <a href="/events"><li>Events</li></a>
     <a href="/coaching"><li>Coaching Information</li></a>
