--- a/webdocs/templates/content-map.html
+++ b/webdocs/templates/content-map.html
@@ -1,1 +1,8 @@
 <p>Wahey, it's Google API's time to shine!</p>
+
+<div id="mapDiv"/>
+
+<script type="text/javascript" src="/js/map.js"></script>
+<script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeZeZuKJ0HPR7JWqtBaxeN_0SfCTeR4mE&sensor=true&callback=createMap">
+</script>
