--- a/webdocs/css/main.css
+++ b/webdocs/css/main.css
@@ -47,3 +47,25 @@ body {
 #mapDiv {
     height:100%;
 }
+    
+#footer {
+    position:absolute;
+    bottom:0;
+    width:1080px;
+    height:20px;
+}
+#footer p {
+    float:right;
+    color:#bbb;
+    text-shadow:1px 1px 1px #222;
+    padding-right:20px;
+}
+#footer p a {
+    color:#ddd;
+    text-decoration:underline;
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s;
+}
+#footer p a:hover {
+    color:cornflowerblue;
+}
