--- a/webdocs/templates/content-coaching.html
+++ b/webdocs/templates/content-coaching.html
@@ -1,1 +1,20 @@
-<p>Our coaches will make you better at Tennis</p>
+<h1>Coaching Information</h1>
+
+<h2>Coaches</h2>
+
+<h3>Helen Jackson</h3>
+
+<ul id="helenQualificationList" class="ulWithBullets">
+    <li>LTA Level 2 qualified coach</li>
+    <li>DBS (formally CRB) checked</li>
+    <li>Working and Safe Guarding with Children Certified</li>
+    <li>First Aid Qualified</li>
+    <li>Fully insured - Public Liability to £1M</li>
+</ul>
+
+<h2>Coaching Groups</h2>
+
+<p><strong>Beginners:</strong> Wednesday 16:30 - 16:45</p>
+<p><strong>Progressors:</strong> Wednesday 16:45 - 17:30</p>
+<p><strong>Intermediate:</strong> Thursdays 17:30 - 18:30</p>
+<p>Cost: £5.00 per child per session</p>
