--- a/webdocs/templates/sideBar.html
+++ b/webdocs/templates/sideBar.html
@@ -2,13 +2,13 @@
     <a href="/main"><li>Home</li></a>
     <a href="/history"><li>History</li></a>
     <a href="/events"><li>Events</li></a>
+    <a href="/clubnights"><li>Club Nights</li></a>
     <a href="/coaching"><li>Coaching Information</li></a>
     <a href="/contact"><li>Contact Details</li></a>
     <a href="/membership"><li>Membership</li></a>
     <a href="/map"><li>How To Find Us</li></a>
 </ul>
 
-<p id="externalLinksLI">EXTERNAL LINKS</p>
 <ul id="externalLinks">
     <a href="http://www.lta.org.uk/in-your-area/Suffolk"><li>Suffolk LTA</li></a>
     <a href="http://www.lta.org.uk"><li>LTA</li></a>
