--- a/webdocs/templates/content-coaching.html
+++ b/webdocs/templates/content-coaching.html
@@ -3,6 +3,7 @@
 <h2>Coaches</h2>
 
 <h3>Helen Jackson</h3>
+<p>Email: <a href="mailto:squash.jackson@hotmail.co.uk">squash.jackson@hotmail.co.uk</a></p>
 
 <ul id="helenQualificationList" class="ulWithBullets">
     <li>LTA Level 2 qualified coach</li>
