--- a/webdocs/templates/content-history.html
+++ b/webdocs/templates/content-history.html
@@ -1,1 +1,11 @@
-<p>The club was founded in the 15th century by a gang of time-travelling robotic velociraptors</p>
+<h1>History</h1>
+
+<p>East Bergholt Tennis Club was formed in 1986 after an earlier survey of the community identified a need and desire for tennis courts to be added to the village sporting facilities. At the time the efforts of one or two committed individuals saw the construction of a floodlit multi-sports area available for tennis, netball, 5-a-side football and cricket practice.The construction cost of approximately £26000 was raised through fundraising, grant aid, sponsorship and the support of the Parish Council. The facility (owned by the Parish Council) was managed by a newly formed organisation known as East Bergholt Sports Association.</p>
+
+<p>It was quickly evident that the first members were a mixture of social and competitive tennis players and in order to provide the opportunity for everyone to fulfil their needs a third tennis court was necessary. This required a further period of fund raising but due to the generosity of a local resident offering the use of their own court the Club were able to join local competitive ladies, men's and 'mixed' leagues ahead of it's construction! Initially the third court was not floodlit but, yet again, the Club's enthusiasm for improvement saw floodlights installed soon after.</p>
+
+<p>Alongside the expansion of the playing facility a small clubhouse was constructed. Unfortunately storm damage meant a replacement was needed but for once suitable insurance allowed for immediate reconstruction.</p>
+
+<p>In 1994 management of the multi-sports surface passed to East Bergholt Sports Council. Whilst changing in name, effectively the new body continues to oversee the usage of the surface with 'EBTC' being the main user.</p>
+
+<p>Membership has fluctuated over the years but many of the founder members are still playing, both socially and competitively.</p>
