--- a/webdocs/templates/content-map.html
+++ b/webdocs/templates/content-map.html
@@ -1,4 +1,8 @@
+<h1>How to find us</h1>
+
 <div id="mapDiv"/>
+
+<p>Find us on Google <a href="https://www.google.com/maps/@51.9699968,1.0280638,18z">here</a></p>
 
 <script type="text/javascript" src="/js/map.js"></script>
 <script type="text/javascript"
