Added header text

--- a/webdocs/css/main.css
+++ b/webdocs/css/main.css
@@ -58,6 +58,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     float:left;
 }
 
+h1#headerText {
+    float: right;
+    color: white;
+    margin: 10px 20px 0 0;
+    width: 310px;
+    text-align: right;
+    line-height: 43px;
+    text-shadow:
+   -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000;
+}
+
 #sideBar {
     float:left;
     width:150px;
