--- a/webdocs/css/main.css
+++ b/webdocs/css/main.css
@@ -61,10 +61,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 h1#headerText {
     float: right;
     color: white;
-    margin: 10px 20px 0 0;
+    margin: 16px 24px 0 0;
+    font-size: 52px;
     width: 310px;
     text-align: right;
-    line-height: 43px;
+    line-height: 57px;
     text-shadow:
    -1px -1px 0 #000,
     1px -1px 0 #000,
