--- a/webdocs/templates/content-clubnights.html
+++ b/webdocs/templates/content-clubnights.html
@@ -1,3 +1,9 @@
 <h1>Club Nights</h1>
 
-<p>These are held on Tuesday evenings (Time TBC) Informal session, turn up &amp; play, all standards welcome.</p>
+<p>Thinking of joining? Come along to our club nights.</p>
+
+<p>These are held on Tuesday evenings at 7:30, March-October.  Informal session, turn up &amp; play, all standards welcome.</p>
+
+<p>Check our <a href="http://www.facebook.com/eastbergholttennisclub">Facebook page</a> for information</p>
+
+<p>Or contact <a href="mailto:r_adams71@btinternet.com">Richard Adams</a></p>
