--- a/webdocs/templates/content-coaching.html
+++ b/webdocs/templates/content-coaching.html
@@ -1,6 +1,6 @@
 <h1>Coaching Information</h1>
 
-<h2>Coaches</h2>
+<h2>Coach</h2>
 
 <h3>Helen Jackson</h3>
 <p>Email: <a href="mailto:squash.jackson@hotmail.co.uk">squash.jackson@hotmail.co.uk</a></p>
