--- a/webdocs/templates/content-contact.html
+++ b/webdocs/templates/content-contact.html
@@ -1,1 +1,40 @@
-<p>Pick up the old dog 'n' bone, and give us a Jonathan King. Apples and pears, how's'ya Father</p>
+<h1>Contact details</h1>
+
+<div class="contactDiv">
+
+    <img src="img/headshot.jpg" class="headshot"/>
+
+    <h2>Chairman</h2>
+
+    <h3>Mike Foley</h3>
+
+    <p class="indented">Email: <a href="mailto:mike.foley100@btinternet.com">mike.foley100@btinternet.com</a></p>
+</div>
+
+<div class="contactDiv">
+    <img src="img/headshot.jpg" class="headshot"/>
+
+    <h2>Membership Secretary</h2>
+
+    <h3>Richard Adams</h3>
+
+    <p class="indented">Email: <a href="mailto:r_adams71@btinternet.com">r_adams71@btinternet.com</a>
+</div>
+
+<div class="contactDiv">
+
+    <img src="img/headshot.jpg" class="headshot"/>
+
+    <h2>Secretary</h2>
+
+    <h3>Joan Kellner</h3>
+
+    <p class="indented">Phone: <a href="tel:01206 298132">01206 298132</a></p>
+    <p class="indented">Email: <a href="mailto:ronald.kellner@totalise.co.uk">mailto:ronald.kellner@totalise.co.uk</a></p>
+</div>
+
+<h2>Other committee members</h2>
+
+<h3>Penny Wilshire</h3>
+<h3>Helen Jackson</h3>
+<h3>Veronica Angel</h3>
