--- a/webdocs/templates/content-events.html
+++ b/webdocs/templates/content-events.html
@@ -1,1 +1,7 @@
-<p>All sorts of crazy parties</p>
+<h1>Forthcoming events</h1>
+
+<p>Barbeque and Wimbledon-style tournament: Date TBC</p>
+
+<p>Salsa Night: Saturday 11th October 2014</p>
+
+<p>Quiz Night: Saturday 31st January 2015</p>
