--- a/webdocs/templates/content-main.html
+++ b/webdocs/templates/content-main.html
@@ -1,1 +1,7 @@
-<p>Here's the text for the main page. Isn't it spiffy!?</p>
+<h1 id="mainPageHeader">Come and enjoy tennis at your local club</h1>
+
+<p>Gandish Rd. Playing fields,<br/>East Bergholt,<br/>Suffolk<br/>CO7 6TP</p>
+
+<p>New members of all standards welcome</p>
+
+<p>The club has three floodlit hard tennis courts</p>
