--- a/webdocs/templates/content-membership.html
+++ b/webdocs/templates/content-membership.html
@@ -1,4 +1,4 @@
-<p>Members get access to special privileges, such as:</p>
+<!--<p>Members get access to special privileges, such as:</p>
 
 <ul class="ulWithBullets">
     <li>Real Tennis</li>
@@ -6,4 +6,23 @@
     <li>Zero-gravity Tennis</li>
     <li>Israeli-Palestinian Conflict Muffins</li>
     <li>Fire</li>
+</ul>-->
+
+<h1>Membership</h1>
+
+<p>Annual membership fees are due April</p>
+
+<p>Mid-year joining rates are prorated</p>
+
+<br/>
+
+<h3>Membership fees</h3>
+
+<ul id="membershipFeesList" class="ulWithBullets">
+    <li>First adult: £50</li>
+    <li>Second adult: £40</li>
+    <li>Student: £25</li>
+    <li>Junior (up to age 18): £15</li>
+    <li>1 adult and up to 3 children: £70</li>
+    <li>2 adults and up to 3 children: £100</li>
 </ul>
