--- a/webdocs/templates/sideBar.html
+++ b/webdocs/templates/sideBar.html
@@ -3,6 +3,7 @@
     <a href="/history"><li>History</li></a>
     <a href="/events"><li>Events</li></a>
     <a href="/clubnights"><li>Club Nights</li></a>
+    <a href="/leagues"><li>Leagues</li></a>
     <a href="/coaching"><li>Coaching Information</li></a>
     <a href="/contact"><li>Contact Details</li></a>
     <a href="/membership"><li>Membership</li></a>
@@ -14,5 +15,4 @@
     <a href="http://www.lta.org.uk"><li>LTA</li></a>
     <a href="http://www.eastbergholt.org.uk"><li>East Bergholt</li></a>
     <a href="https://facebook.com/EastBergholt"><li>Facebook</li></a>
-    
 </ul>
