--- a/webdocs/templates/content-events.html
+++ b/webdocs/templates/content-events.html
@@ -1,6 +1,6 @@
 <h1>Forthcoming events</h1>
 
-<p>Barbeque and Wimbledon-style tournament: Date TBC</p>
+<p>Barbeque and Wimbledon-style tournament: Saturday 12th July</p>
 
 <p>Salsa Night: Saturday 11th October 2014</p>
 
