--- a/webdocs/css/main.css
+++ b/webdocs/css/main.css
@@ -40,10 +40,14 @@ strong {
 
 a {
     text-decoration: underline;
-    color:#444;
+    color: #444;
     -webkit-transition: color 0.5s;
     transition: color 0.5s;
-    
+}
+
+a[href^="tel:"] {
+    color: #000;
+    text-decoration: none;
 }
 
 a:hover {
