Adding membership form

--- a/webdocs/templates/content-membership.html
+++ b/webdocs/templates/content-membership.html
@@ -26,3 +26,5 @@
     <li>1 adult and up to 3 children: £70</li>
     <li>2 adults and up to 3 children: £100</li>
 </ul>
+<br/>
+<p>Download the membership form <a href="/downloads/eastBergholtMembershipForm.docx" download="eastBergholtMembershipForm.docx">here</a>.
