Updated Facebook link

--- a/webdocs/templates/content-clubnights.html
+++ b/webdocs/templates/content-clubnights.html
@@ -4,6 +4,6 @@
 
 <p>These are held on Tuesday evenings at 7:30, March-October.  Informal session, turn up &amp; play, all standards welcome.</p>
 
-<p>Check our <a href="http://www.facebook.com/eastbergholttennisclub">Facebook page</a> for information</p>
+<p>Check our <a href="https://www.facebook.com/pages/East-Bergholt-Tennis-Club/1422232758046801">Facebook page</a> for information</p>
 
 <p>Or contact <a href="mailto:r_adams71@btinternet.com">Richard Adams</a></p>
