--- a/webdocs/templates/sideBar.html
+++ b/webdocs/templates/sideBar.html
@@ -14,5 +14,5 @@
     <a href="http://www.lta.org.uk/in-your-area/Suffolk"><li>Suffolk LTA</li></a>
     <a href="http://www.lta.org.uk"><li>LTA</li></a>
     <a href="http://www.eastbergholt.org.uk"><li>East Bergholt</li></a>
-    <a href="https://facebook.com/EastBergholt"><li>Facebook</li></a>
+    <a href="https://www.facebook.com/pages/East-Bergholt-Tennis-Club/1422232758046801"><li>Facebook</li></a>
 </ul>
