--- a/webdocs/templates/content-coaching.html
+++ b/webdocs/templates/content-coaching.html
@@ -1,5 +1,9 @@
 <h1>Coaching Information</h1>
 
+<img class="mainPicture" src="img/IMG_6672.JPG"/>
+
+<img id="helenCoachingPic" src="img/Squash.jpg"/>
+
 <h2>Coach</h2>
 
 <h3>Helen Jackson</h3>
@@ -13,9 +17,17 @@
     <li>Fully insured - Public Liability to £1M</li>
 </ul>
 
+<img class="mainPicture" src="img/IMG_6823.JPG"/>
+
+<img class="mainPicture" src="img/IMG_6730.JPG"/>
+
 <h2>Coaching Groups</h2>
 
 <p><strong>Beginners:</strong> Wednesday 16:30 - 16:45</p>
 <p><strong>Progressors:</strong> Wednesday 16:45 - 17:30</p>
-<p><strong>Intermediate:</strong> Thursdays 17:30 - 18:30</p>
+<p><strong>Intermediate:</strong> Thursdays 17:00 - 18:00</p>
+<p><strong>Advanced:</strong> Thursdays 18:00 - 19:00</p>
 <p>Cost: £5.00 per child per session</p>
+
+<img class="mainPicture" src="img/IMG_6754.JPG"/>
+<img class="mainPicture" src="img/IMG_7828.JPG"/>
