--- a/webdocs/templates/content-events.html
+++ b/webdocs/templates/content-events.html
@@ -5,3 +5,7 @@
 <p>Salsa Night: Saturday 11th October 2014</p>
 
 <p>Quiz Night: Saturday 31st January 2015</p>
+
+<h2>Previous events</h2>
+
+<img class="mainPicture" src="img/P1050048.jpg"/>
