--- a/webdocs/templates/content-leagues.html
+++ b/webdocs/templates/content-leagues.html
@@ -1,3 +1,7 @@
 <h1>Leagues</h1>
 
 <p>East Bergholt Tennis Club participates in the Ipswich and District, Summer, and Floodlit Leagues</p>
+
+<img class="mainPicture" src="img/P1050046.jpg"/>
+
+<img class="mainPicture" src="img/IMG_6738.JPG"/>
