--- a/webdocs/templates/content-main.html
+++ b/webdocs/templates/content-main.html
@@ -2,6 +2,12 @@
 
 <p>Gandish Rd. Playing fields,<br/>East Bergholt,<br/>Suffolk<br/>CO7 6TP</p>
 
+<img class="mainPicture" src="img/IMG_6739.JPG"/>
+
 <p>New members of all standards welcome</p>
 
+<img class="mainPicture" src="img/IMG_6720.JPG"/>
+
 <p>The club has three floodlit hard tennis courts</p>
+
+<img class="mainPicture" src="img/P1050007.jpg"/>
