--- a/webdocs/templates/content-membership.html
+++ b/webdocs/templates/content-membership.html
@@ -27,4 +27,4 @@
     <li>2 adults and up to 3 children: £100</li>
 </ul>
 <br/>
-<p>Download the membership form <a href="/downloads/eastBergholtMembershipForm.docx" download="eastBergholtMembershipForm.docx">here</a>.
+<p>Download the membership form <a href="/downloads/membershipForm.doc" download="EBTC Membership Form.doc">here</a>.
