--- a/webdocs/templates/content-contact.html
+++ b/webdocs/templates/content-contact.html
@@ -2,7 +2,7 @@
 
 <div class="contactDiv">
 
-    <img src="img/headshot.jpg" class="headshot"/>
+    <img src="img/P1050052.jpg" class="headshot"/>
 
     <h2>Chairman</h2>
 
@@ -12,7 +12,7 @@
 </div>
 
 <div class="contactDiv">
-    <img src="img/headshot.jpg" class="headshot"/>
+    <img src="img/P1050051.jpg" class="headshot"/>
 
     <h2>Membership Secretary</h2>
 
@@ -23,7 +23,7 @@
 
 <div class="contactDiv">
 
-    <img src="img/headshot.jpg" class="headshot"/>
+    <img src="img/P1050049.jpg" class="headshot"/>
 
     <h2>Secretary</h2>
 
@@ -33,8 +33,19 @@
     <p class="indented">Email: <a href="mailto:ronald.kellner@totalise.co.uk">mailto:ronald.kellner@totalise.co.uk</a></p>
 </div>
 
+<div class="contactDiv">
+
+    <img src="img/P1050050.jpg" class="headshot"/>
+
+    <h2>Treasurer</h2>
+
+    <h3>Ronald Kellner</h3>
+
+    <p class="indented">Phone: <a href="tel:01206 298132">01206 298132</a></p>
+    <p class="indented">Email: <a href="mailto:ronald.kellner@totalise.co.uk">mailto:ronald.kellner@totalise.co.uk</a></p>
+</div>
 <h2>Other committee members</h2>
 
-<h3>Penny Wilshire</h3>
+<h3>Penny Willsher</h3>
 <h3>Helen Jackson</h3>
 <h3>Veronica Angel</h3>
